tests/coverage/misc/fail/negative/numeric_literals/002_separator_trailing.js
// Expected error: invalid trailing numeric separator.
const value = 1_;
